# structured_pixi_build

./: .gitignore  HOWTO.md  README.md  harvest-conda-source.py
art_workspace/: pixi.toml
art_workspace/art/: pixi.toml
art_workspace/art_root_io/: pixi.toml  recipe.yaml
art_workspace/canvas/: pixi.toml
art_workspace/canvas_root_io/: build.sh  pixi.toml  recipe.yaml
art_workspace/cetlib/: build.sh  pixi.toml
art_workspace/cetlib_except/: pixi.toml
art_workspace/fhiclcpp/: pixi.toml
art_workspace/hep_concurrency/: pixi.toml
art_workspace/messagefacility/: pixi.toml
dune-workspace/: pixi.toml
dune-workspace/artdaq_core/: build.sh  pixi.toml  recipe.yaml
dune-workspace/dune_pardata/: build.sh  pixi.toml  recipe.yaml
dune-workspace/duneana/: build.sh  pixi.toml  recipe.yaml
dune-workspace/duneanaobj/: pixi.toml  recipe.yaml
dune-workspace/duneanaobj-4.0.0/: pixi.toml
dune-workspace/dunecalib/: build.sh  pixi.toml  recipe.yaml
dune-workspace/dunecore/: pixi.toml  recipe.yaml
dune-workspace/dunedaqdataformats/: build.sh  pixi.toml  recipe.yaml
dune-workspace/dunedataprep/: build.sh  pixi.toml  recipe.yaml
dune-workspace/dunedetdataformats/: build.sh  pixi.toml  recipe.yaml
dune-workspace/duneexamples/: pixi.toml  recipe.yaml
dune-workspace/duneopdet/: build.sh  pixi.toml  recipe.yaml
dune-workspace/dunepdlegacy/: build.sh  pixi.toml  recipe.yaml
dune-workspace/duneprototypes/: build.sh  pixi.toml  recipe.yaml
dune-workspace/dunereco/: build.sh  pixi.toml  recipe.yaml
dune-workspace/dunesim/: build.sh  pixi.toml  recipe.yaml
dune-workspace/dunesw/: pixi.toml  recipe.yaml
dune-workspace/dunetrigger/: build.sh  pixi.toml  recipe.yaml
dune-workspace/duneutil/: build.sh  pixi.toml  recipe.yaml
dune-workspace/edepsim/: build.sh  pixi.toml  recipe.yaml
dune-workspace/fhiclcpp-4.18.4/: pixi.toml  recipe.yaml
dune-workspace/geant4reweight/: build.sh  pixi.toml  recipe.yaml
dune-workspace/genie_phyopt/: build.sh  pixi.toml  recipe.yaml
dune-workspace/genie_xsec/: build.sh  pixi.toml  recipe.yaml
dune-workspace/highfive/: build.sh  pixi.toml  recipe.yaml
dune-workspace/larcv2/: build.sh  pixi.toml  recipe.yaml
dune-workspace/log4cpp/: ISSUE.md  build.sh  pixi.toml  recipe.yaml
dune-workspace/nd_cafmaker/: build.sh  pixi.toml  recipe.yaml
dune-workspace/protoduneana/: build.sh  pixi.toml  recipe.yaml
dune-workspace/srproxy/: pixi.toml
dune-workspace/trace/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/: pixi.toml
larsoft-workspace/artg4tk/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/cry/: build.sh  cry_v1.7.patch  pixi.toml  recipe.yaml
larsoft-workspace/dk2nudata/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/dk2nugenie/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/gallery/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/genie/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/hep_hpc/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/ifbeam/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/ifdh_art/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/ifdhc/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/ifdhc_config/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/larana/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/larcore/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/larcorealg/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/larcoreobj/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/lardata/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/lardataalg/: build.sh  pixi.toml  recipe.yaml
larsoft-workspace/pythia6/: CMakeLists.txt  build.sh  pixi.toml  recipe.yaml
larsoft-workspace/tpythia6/: CMakeLists.txt  build.sh  pixi.toml  recipe.yaml
wct-workspace/: pixi.toml
(+131 files in other folders)
